# todo-api

./: .flaskenv  .gitignore  CLAUDE.md  pyproject.toml
docs/adr/: 001-python-flask-backend.md  002-uv-dependency-management.md  003-vertical-slice-architecture.md  004-hexagonal-architecture.md  005-rest-and-graphql-per-slice.md  006-openapi-specification.md
src/todo_api/: __init__.py  config.py  extensions.py  openapi.yaml
src/todo_api/core/: __init__.py  exceptions.py  interfaces.py  result.py
src/todo_api/features/todos/: __init__.py  domain.py  models.py  repository.py  service.py
src/todo_api/features/todos/adapters/: __init__.py  sql_repository.py
src/todo_api/features/todos/graphql/: __init__.py  mutations.py  queries.py  types.py
src/todo_api/features/todos/rest/: __init__.py  routes.py  schemas.py
src/todo_api/graphql/: __init__.py  schema.py
src/todo_api/infrastructure/: __init__.py  database.py  logging.py  middleware.py
tests/: conftest.py  test_health.py
tests/features/todos/: test_domain.py  test_graphql.py  test_repository.py  test_rest.py  test_service.py
tests/integration/: test_database.py
